<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">euecologico2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_all">Select All</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_filter" />
    <string name="action_update" />
    <string name="categories_already_added">All the possibles categories for this position are already added.</string>
    <string name="no_internet_connection">No internet connection detected.</string>
    <string name="eu_ecologico"><![CDATA[<font color=\'#ffffff\'>Eu Ecológico</font>]]></string>
    <string name="error_contacting_the_server">Error contacting the server - please check your connection</string>
    <string name="internal_error">Internal error</string>
    <string name="remove_local">Tem certeza de que quer remover esse local?</string>
    <string name="markers_successfully_updated">Marker(s) successfully updated</string>
    <string name="synchronizing_locations">Synchronizing locations</string>
    <string name="synchronizing_with_the_server">Synchronizing with the server...</string>
    <string name="confirm_dialog">Confirm dialog</string>
    <string name="image_description">Category image</string>
    <string name="checkbox_description">Checkbox</string>

</resources>
