<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <!-- Update, should appear as action button -->

    <item android:id="@+id/action_update"
        android:icon="@drawable/update"
        android:title="@string/action_update"
        app:showAsAction="ifRoom"
        android:showAsAction="ifRoom"

        />
    <item android:id="@+id/action_filter"
        android:icon="@drawable/filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"
        android:showAsAction="ifRoom"

        />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:showAsAction="never"/>
</menu>